fix(URLHelper): add sanatzePath method